--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>Login | Automation</title>
     <link rel="stylesheet" href="./css/css/bootstrap.css">
     <link rel="stylesheet" href="./css/style.css">
-    
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <link href="./css/css/bootstrap.css" rel="stylesheet" id="bootstrap-css"> -->
+    <script src="./css/css/bootstrap.js"></script>
+    <script src="./css/css/jquery_min.js"></script>
     <script src="./css/js/style.js"></script>
-    
+
 
 </head>
 
