--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./assets/bootstrap.js"></script>
     <script src="./assets/popper.min.js"></script>
     <script src="./assets/tooltip.min.js"></script>
-    <title>Login</title>
+    <title>Login | Automation</title>
 </head>
 <body>
 <!-- Navigation -->
