--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                             <input type="checkbox" name="rememberpass" class="custom-control-input" id="customCheck1">
                             <label class="custom-control-label" for="customCheck1">Remember password</label>
                         </div>
-                        <input type="button" class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" value="Submit" name="submit" onclick="testLogin()">
+                        <input type="button" class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2"
+                               value="Submit" name="submit" id="btnLogin" onclick="testLogin()">
                     </form>
 
                 </div>
