--- a/countWidgets.html
+++ b/countWidgets.html
@@ -98,11 +98,11 @@
                     <label for="age3">61 - 100</label><hr>
 
                     <p>Please select your programming subject:</p>
-                    <input type="radio" id="java" name="java" value="java">
+                    <input type="radio" id="java" name="subject" value="java">
                     <label for="male">Java</label><br>
-                    <input type="radio" id="python" name="python" value="python">
+                    <input type="radio" id="python" name="subject" value="python">
                     <label for="female">python</label><br>
-                    <input type="radio" id="javascript" name="javascript" value="javascript">
+                    <input type="radio" id="javascript" name="subject" value="javascript">
                     <label for="other">javascript</label><hr>
                 </form>
 
