--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         let password = document.getElementById("inputPassword").value;
         if (email === "aditya@gmail.com" && password === "testing") {
             alert("Validation done!!!")
-            window.location = './countWidgets.html'
+            // window.location = './countWidgets.html'
         } else {
             alert("Authentication failed!!!")
         }
