--- a/tutorial.html
+++ b/tutorial.html
@@ -17,7 +17,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light static-top container-fluid">
     <div class="container">
         <a class="navbar-brand logo" href="./index.html">
-            <img src="../brandImage/ll.png" class="img-fluid " alt="">
+            <img src="./robot.png" class="img-fluid " alt="" style="max-width:10% !important; height:auto !important;">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,11 +26,13 @@
             <ul class="navbar-nav ml-auto text-center text-justify">
                 <li class="nav-item ">
                     <a class="nav-link" href="./index.html">Home
-                        <span class="sr-only">(current)</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./tutorial.html">Tutorial</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./countWidgets.html">Widgets</a>
                 </li>
             </ul>
         </div>
