--- a/countWidgets.html
+++ b/countWidgets.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./assets/bootstrap.css" style="max-width:10% !important; height:auto !important;">
     <link rel="stylesheet" href="./assets/bootstrap.css">
     <link rel="stylesheet" href="./assets/style.css">
     <script src="./assets/jquery-3.4.0.slim.min.js"></script>
     <script src="./assets/bootstrap.js"></script>
     <script src="./assets/popper.min.js"></script>
     <script src="./assets/tooltip.min.js"></script>
+
     <title>Widgets | Count</title>
 </head>
 <body>
