--- a/countWidgets.html
+++ b/countWidgets.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/bootstrap.css" style="max-width:10% !important; height:auto !important;">
+    <link rel="icon" href="./robot.png">
     <link rel="stylesheet" href="./assets/bootstrap.css">
     <link rel="stylesheet" href="./assets/style.css">
     <script src="./assets/jquery-3.4.0.slim.min.js"></script>
