--- a/studentMarks.html
+++ b/studentMarks.html
@@ -21,7 +21,8 @@
         <a class="navbar-brand logo" href="./index.html">
             <img src="./robot.png" class="img-fluid " alt="" style="max-width:10% !important; height:auto !important;">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -44,48 +45,47 @@
 <br>
 <div class="container">
     <div class="card mb-3">
-                <div class="card-header">
-                    <i class="fas fa-table"></i>
-                    Student Data
-                </div>
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-bordered text-center dataTable no-footer" id="dataTable"
-                               width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info"
-                               style="width: 100%;">
-                            <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Python</th>
-                                <th>Java</th>
-                                <th>C</th>
-                                <th>Javascript</th>
-                                <th>GO</th>
-                                <th>Total</th>
-                                <th>Percentage</th>
-                                <th>Result</th>
+        <div class="card-header">
+            <i class="fas fa-table"></i>
+            Student Data
+        </div>
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-bordered text-center dataTable no-footer" id="dataTable"
+                       width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info"
+                       style="width: 100%;">
+                    <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Python</th>
+                        <th>Java</th>
+                        <th>C</th>
+                        <th>Javascript</th>
+                        <th>GO</th>
+                        <th>Total</th>
+                        <th>Percentage</th>
+                        <th>Result</th>
 
-                            </tr>
-                            </thead>
-                            <tbody>
+                    </tr>
+                    </thead>
+                    <tbody>
 
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
+        </div>
+    </div>
 </div>
-
 </body>
 </html>
