--- a/tutorial.html
+++ b/tutorial.html
@@ -42,6 +42,31 @@
 </nav>
 <br>
 <br>
+<div class="container ">
+    <div class="card card-body ">
+        <div class="row">
+            <div class="col-md-6 col-lg-6">
+                <img src="./selenium.webp" style="width: 400px !important; height: 300px !important;" alt="test"><br><hr>
+                <p>Test fixture - A test fixture represents the preparation needed to perform one or more tests, and any associate cleanup actions.
+                    This may involve, for example, creating temporary or proxy databases, directories, or starting a server process.</p>
+            </div>
+            <div class="col-md-6 col-lg-6 justify-content-around">
+                <p>Test Loader – It’s a Python class which loads test cases and suites created locally or from an external
+                    data source like a file. It releases a TestSuite object that carries those cases and suites.</p>
+                <p>Test Case – The TestCase class holds the test handlers and provides hooks for preparing each handler
+                    and for cleaning up after execution.</p>
+                <p>Test Suite – It acts as a container for grouping test cases. With the help of a test suite, you can combine
+                    a set of test cases representing specific functionality of the application under test.</p>
+                <p>Test Runner – It provides a runnable interface for the execution of tests and delivers the results to the user.
+                    It can use channels like a GUI, a textual medium, or return a standard code to notify the results of test execution.</p>
+                <p>Test Report – This component organizes test results, display pass/fail status of the executed test cases.
+                    It even provides the details of steps, a summary of overall run and the time lapsed in execution.</p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 
 </body>
 </html>
