--- a/tutorial.html
+++ b/tutorial.html
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./countWidgets.html">Widgets</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./studentMarks.html">Excel</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -66,6 +69,12 @@
 
     </div>
 </div>
+<!-- footer -->
+<footer class="  container-fluid py-4 bg-transparent text-white-50">
+    <div class="container text-center">
+        <small>Copyright &copy; 2020 Automation Testing</small>
+    </div>
+</footer>
 
 
 </body>
