--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./countWidgets.html">Widgets</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./studentMarks.html">Excel</a>
+                </li>
             </ul>
         </div>
     </div>
