--- a/tutorial.html
+++ b/tutorial.html
@@ -39,6 +39,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./studentMarks.html">Excel</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./seleniumTest/Emp1.html">Program 10A</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./seleniumTest/Emp2.html">Program 10B</a>
+                </li>
             </ul>
         </div>
     </div>
