--- a/seleniumTest/Emp1.html
+++ b/seleniumTest/Emp1.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="./robot.png">
-    <link rel="stylesheet" href="./assets/bootstrap.css">
-    <link rel="stylesheet" href="./assets/bootstrap.css">
-    <link rel="stylesheet" href="./assets/style.css">
-    <script src="./assets/jquery-3.4.0.slim.min.js"></script>
-    <script src="./assets/bootstrap.js"></script>
-    <script src="./assets/popper.min.js"></script>
-    <script src="./assets/tooltip.min.js"></script>
+    <link rel="icon" href="../robot.png">
+    <link rel="stylesheet" href="../assets/bootstrap.css">
+    <link rel="stylesheet" href="../assets/bootstrap.css">
+    <link rel="stylesheet" href="../assets/style.css">
+    <script src="../assets/jquery-3.4.0.slim.min.js"></script>
+    <script src="../assets/bootstrap.js"></script>
+    <script src="../assets/popper.min.js"></script>
+    <script src="../assets/tooltip.min.js"></script>
     <title>Widgets | Count</title>
     <script>
     function copy() {
@@ -24,8 +24,8 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light static-top container-fluid">
     <div class="container">
-        <a class="navbar-brand logo" href="./index.html">
-            <img src="./robot.png" class="img-fluid " alt="" style="max-width:10% !important; height:auto !important;">
+        <a class="navbar-brand logo" href="../index.html">
+            <img src="../robot.png" class="img-fluid " alt="" style="max-width:10% !important; height:auto !important;">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
