--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="./countWidgets.html">Widgets</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./studentMarks.html">Excel</a>
+                    <a class="nav-link" href="./seleniumTest/student.html">Excel</a>
                 </li>
                  <li class="nav-item">
                     <a class="nav-link" href="./seleniumTest/Emp1.html">Program 10A</a>
