--- a/seleniumTest/student.html
+++ b/seleniumTest/student.html
@@ -86,79 +86,86 @@
 <br>
 <br>
 
-<table cellspacing="2px" cellpadding="2">
-    <tbody>
-    <tr>
-        <th>Enter Student Name:</th>
-        <th>Subject 1:</th>
-        <th>Subject 2:</th>
-        <th>Subject 3:</th>
-        <th>Subject 4:</th>
-        <th>Subject 5:</th>
-        <th>Total</th>
-        <th>Percentage</th>
-        <th>Result</th>
-    </tr>
-    <tr>
-        <td><input type="text" value="" id="student_name"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="total"></td>
-        <td><input type="text" value="" class="percentage"></td>
-        <td><input type="text" value="" class="result"></td>
-    </tr>
-    <tr>
-        <td><input type="text" value="" id="student_name"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="total"></td>
-        <td><input type="text" value="" class="percentage"></td>
-        <td><input type="text" value="" class="result"></td>
-    </tr>
-    <tr>
-        <td><input type="text" value="" id="student_name"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="total"></td>
-        <td><input type="text" value="" class="percentage"></td>
-        <td><input type="text" value="" class="result"></td>
-    </tr>
-    <tr>
-        <td><input type="text" value="" id="student_name"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="total"></td>
-        <td><input type="text" value="" class="percentage"></td>
-        <td><input type="text" value="" class="result"></td>
-    </tr>
-    <tr>
-        <td><input type="text" value="" id="student_name"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="marks"></td>
-        <td><input type="text" value="" class="total"></td>
-        <td><input type="text" value="" class="percentage"></td>
-        <td><input type="text" value="" class="result"></td>
+<div class="container">
+    <div class="card">
+        <div class="card-body">
+            <table cellspacing="2px" cellpadding="2">
+                <tbody>
+                <tr>
+                    <th>Enter Student Name:</th>
+                    <th>Subject 1:</th>
+                    <th>Subject 2:</th>
+                    <th>Subject 3:</th>
+                    <th>Subject 4:</th>
+                    <th>Subject 5:</th>
+                    <th>Total</th>
+                    <th>Percentage</th>
+                    <th>Result</th>
+                </tr>
+                <tr>
+                    <td><input type="text" value="" id="student_name"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="total"></td>
+                    <td><input type="text" value="" class="percentage"></td>
+                    <td><input type="text" value="" class="result"></td>
+                </tr>
+                <tr>
+                    <td><input type="text" value="" id="student_name"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="total"></td>
+                    <td><input type="text" value="" class="percentage"></td>
+                    <td><input type="text" value="" class="result"></td>
+                </tr>
+                <tr>
+                    <td><input type="text" value="" id="student_name"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="total"></td>
+                    <td><input type="text" value="" class="percentage"></td>
+                    <td><input type="text" value="" class="result"></td>
+                </tr>
+                <tr>
+                    <td><input type="text" value="" id="student_name"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="total"></td>
+                    <td><input type="text" value="" class="percentage"></td>
+                    <td><input type="text" value="" class="result"></td>
+                </tr>
+                <tr>
+                    <td><input type="text" value="" id="student_name"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="marks"></td>
+                    <td><input type="text" value="" class="total"></td>
+                    <td><input type="text" value="" class="percentage"></td>
+                    <td><input type="text" value="" class="result"></td>
 
-    </tr>
-    </tbody>
-</table>
-<center><input type="button" id="calculate" value="calculate" onclick="calculate()" style="height:50;width:100;">
-</center>
+                </tr>
+                </tbody>
+            </table>
+            <center><input type="button" id="calculate" value="calculate" onclick="calculate()"
+                           style="height:50;width:100;">
+            </center>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
