--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="./assets/popper.min.js"></script>
     <script src="./assets/tooltip.min.js"></script>
     <title>Login | Automation</title>
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 <!-- Navigation -->
@@ -26,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto text-center text-justify">
                 <li class="nav-item ">
-                    <a class="nav-link" href="./index.html">Home
+                    <a class="nav-link" href="../index.html">Home
                     </a>
                 </li>
                 <li class="nav-item">
@@ -40,9 +41,6 @@
                 </li>
                  <li class="nav-item">
                     <a class="nav-link" href="./seleniumTest/Emp1.html">Program 10A</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./seleniumTest/Emp2.html">Program 10B</a>
                 </li>
             </ul>
         </div>
@@ -86,9 +84,7 @@
     </div>
 </footer>
 
-
-
-
+<script src="/js/app.js"></script>
 </body>
 <script>
     function testLogin() {
