--- a/seleniumTest/Emp2.html
+++ b/seleniumTest/Emp2.html
@@ -13,6 +13,7 @@
     <script src="../assets/popper.min.js"></script>
     <script src="../assets/tooltip.min.js"></script>
     <title>Widgets | Count</title>
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 <!-- Navigation -->
@@ -87,5 +88,6 @@
         </tr>
         <tr>
 </center>
+<script src="../js/app.js"></script>
 </body>
 </html>
