--- a/seleniumTest/student.html
+++ b/seleniumTest/student.html
@@ -13,6 +13,7 @@
     <script src="../assets/popper.min.js"></script>
     <script src="../assets/tooltip.min.js"></script>
     <title>Widgets | Count</title>
+    <link rel="manifest" href="/manifest.json">
     <script>
         function calculate() {
             marks_objects = document.getElementsByClassName("marks");
@@ -60,7 +61,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto text-center text-justify">
-                <li class="nav-item ">
+               <li class="nav-item ">
                     <a class="nav-link" href="../index.html">Home
                     </a>
                 </li>
@@ -71,13 +72,10 @@
                     <a class="nav-link" href="../countWidgets.html">Widgets</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../seleniumTest/student.html">Excel</a>
+                    <a class="nav-link" href="./student.html">Excel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../seleniumTest/Emp1.html">Program 10A</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../seleniumTest/Emp2.html">Program 10B</a>
+                    <a class="nav-link" href="./Emp1.html">Program 10A</a>
                 </li>
             </ul>
         </div>
@@ -171,6 +169,7 @@
     </div>
 </div>
 </div>
+<script src="../js/app.js"></script>
 
 </body>
 </html>
