--- a/countWidgets.html
+++ b/countWidgets.html
@@ -11,6 +11,7 @@
     <script src="./assets/bootstrap.js"></script>
     <script src="./assets/popper.min.js"></script>
     <script src="./assets/tooltip.min.js"></script>
+    <link rel="manifest" href="/manifest.json">
 
     <title>Widgets | Count</title>
 </head>
@@ -42,9 +43,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./seleniumTest/Emp1.html">Program 10A</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./seleniumTest/Emp2.html">Program 10B</a>
-                </li>
+            
             </ul>
         </div>
     </div>
@@ -131,6 +130,6 @@
         <small>Copyright &copy; 2020 Automation Testing</small>
     </div>
 </footer>
-
+<script src="/js/app.js"></script>
 </body>
 </html>
