--- a/seleniumTest/Emp1.html
+++ b/seleniumTest/Emp1.html
@@ -13,6 +13,7 @@
     <script src="../assets/popper.min.js"></script>
     <script src="../assets/tooltip.min.js"></script>
     <title>Widgets | Count</title>
+    <link rel="manifest" href="/manifest.json">
     <script>
     function copy() {
         hidden_element = document.getElementById('hiddden_element');
@@ -33,24 +34,22 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto text-center text-justify">
                 <li class="nav-item ">
-                    <a class="nav-link" href="./index.html">Home
+                    <a class="nav-link" href="../index.html">Home
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./tutorial.html">Tutorial</a>
+                    <a class="nav-link" href="../tutorial.html">Tutorial</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./countWidgets.html">Widgets</a>
+                    <a class="nav-link" href="../countWidgets.html">Widgets</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./studentMarks.html">Excel</a>
+                    <a class="nav-link" href="./student.html">Excel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./seleniumTest/Emp1.html">Program 10A</a>
+                    <a class="nav-link" href="./Emp1.html">Program 10A</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./seleniumTest/Emp2.html">Program 10B</a>
-                </li>
+            
             </ul>
         </div>
     </div>
@@ -97,5 +96,6 @@
 <center><input type="button" id="copy" value="copy" onclick="copy()" style="height:50;width:100;">
     <input type="hidden" id="hiddden_element" value="">
 </center>
+<script src="../js/app.js"></script>
 </body>
 </html>
