--- a/tutorial.html
+++ b/tutorial.html
@@ -13,6 +13,7 @@
     <script src="./assets/popper.min.js"></script>
     <script src="./assets/tooltip.min.js"></script>
     <title>Widgets | Count</title>
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 <!-- Navigation -->
@@ -42,9 +43,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./seleniumTest/Emp1.html">Program 10A</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./seleniumTest/Emp2.html">Program 10B</a>
-                </li>
+            
             </ul>
         </div>
     </div>
@@ -81,7 +80,7 @@
         <small>Copyright &copy; 2020 Automation Testing</small>
     </div>
 </footer>
-
+<script src="/js/app.js"></script>
 
 </body>
 </html>
