--- a/seleniumTest/Emp1.html
+++ b/seleniumTest/Emp1.html
@@ -15,11 +15,11 @@
     <title>Widgets | Count</title>
     <link rel="manifest" href="/manifest.json">
     <script>
-    function copy() {
-        hidden_element = document.getElementById('hiddden_element');
-        hiddden_element.setAttribute('value', 'Active')
-    }
-</script>
+        function copy() {
+            hidden_element = document.getElementById('hiddden_element');
+            hiddden_element.setAttribute('value', 'Active')
+        }
+    </script>
 </head>
 <body>
 <!-- Navigation -->
@@ -28,7 +28,8 @@
         <a class="navbar-brand logo" href="../index.html">
             <img src="../robot.png" class="img-fluid " alt="" style="max-width:10% !important; height:auto !important;">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -49,7 +50,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./Emp1.html">Program 10A</a>
                 </li>
-            
+
             </ul>
         </div>
     </div>
@@ -79,13 +80,13 @@
             <td><input type=text value="" class="years_of_exp" placeholder="Enter YOE"></td>
         </tr>
         <tr>
-             <td><input type=text value="" class="name" placeholder="Enter name"></td>
+            <td><input type=text value="" class="name" placeholder="Enter name"></td>
             <td><input type=text value="" class="emp_id" placeholder="Enter id (Number)"></td>
             <td><input type=text value="" class="join_date" placeholder="Enter date | dd-mm-yyyy"></td>
             <td><input type=text value="" class="years_of_exp" placeholder="Enter YOE"></td>
         </tr>
         <tr>
-             <td><input type=text value="" class="name" placeholder="Enter name"></td>
+            <td><input type=text value="" class="name" placeholder="Enter name"></td>
             <td><input type=text value="" class="emp_id" placeholder="Enter id (Number)"></td>
             <td><input type=text value="" class="join_date" placeholder="Enter date | dd-mm-yyyy"></td>
             <td><input type=text value="" class="years_of_exp" placeholder="Enter YOE"></td>
