--- a/seleniumTest/student.html
+++ b/seleniumTest/student.html
@@ -75,7 +75,7 @@
                     <a class="nav-link" href="./student.html">Excel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./Emp1.html">Program 10A</a>
+                    <a class="nav-link" href="./Emp1.html">Program 10</a>
                 </li>
             </ul>
         </div>
@@ -146,6 +146,42 @@
                         <td><input type="text" value="" class="total"></td>
                         <td><input type="text" value="" class="percentage"></td>
                         <td><input type="text" value="" class="result"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="" id="student_name"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="total"></td>
+                        <td><input type="text" value="" class="percentage"></td>
+                        <td><input type="text" value="" class="result"></td>
+
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="" id="student_name"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="total"></td>
+                        <td><input type="text" value="" class="percentage"></td>
+                        <td><input type="text" value="" class="result"></td>
+
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="" id="student_name"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="total"></td>
+                        <td><input type="text" value="" class="percentage"></td>
+                        <td><input type="text" value="" class="result"></td>
+
                     </tr>
                     <tr>
                         <td><input type="text" value="" id="student_name"></td>
