--- a/seleniumTest/student.html
+++ b/seleniumTest/student.html
@@ -31,7 +31,7 @@
                 }
                 total_objects[j].setAttribute('value', total);
 
-                let percentage = ((100 * total) / 500);
+                let percentage = ((100 * total) / 600);
                 percentage_objects[j].setAttribute('value', percentage + "%");
 
                 if (percentage >= 0 && percentage < 50)
@@ -99,6 +99,7 @@
                         <th>Subject 3:</th>
                         <th>Subject 4:</th>
                         <th>Subject 5:</th>
+                        <th>Practical:</th>
                         <th>Total</th>
                         <th>Percentage</th>
                         <th>Result</th>
@@ -110,16 +111,6 @@
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
-                        <td><input type="text" value="" class="total"></td>
-                        <td><input type="text" value="" class="percentage"></td>
-                        <td><input type="text" value="" class="result"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="text" value="" id="student_name"></td>
-                        <td><input type="text" value="" class="marks"></td>
-                        <td><input type="text" value="" class="marks"></td>
-                        <td><input type="text" value="" class="marks"></td>
-                        <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="total"></td>
                         <td><input type="text" value="" class="percentage"></td>
@@ -128,16 +119,6 @@
                     <tr>
                         <td><input type="text" value="" id="student_name"></td>
                         <td><input type="text" value="" class="marks"></td>
-                        <td><input type="text" value="" class="marks"></td>
-                        <td><input type="text" value="" class="marks"></td>
-                        <td><input type="text" value="" class="marks"></td>
-                        <td><input type="text" value="" class="marks"></td>
-                        <td><input type="text" value="" class="total"></td>
-                        <td><input type="text" value="" class="percentage"></td>
-                        <td><input type="text" value="" class="result"></td>
-                    </tr>
-                    <tr>
-                        <td><input type="text" value="" id="student_name"></td>
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
@@ -154,13 +135,26 @@
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="total"></td>
                         <td><input type="text" value="" class="percentage"></td>
                         <td><input type="text" value="" class="result"></td>
-
                     </tr>
                     <tr>
                         <td><input type="text" value="" id="student_name"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="total"></td>
+                        <td><input type="text" value="" class="percentage"></td>
+                        <td><input type="text" value="" class="result"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="" id="student_name"></td>
+                        <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
@@ -178,6 +172,7 @@
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="total"></td>
                         <td><input type="text" value="" class="percentage"></td>
                         <td><input type="text" value="" class="result"></td>
@@ -185,6 +180,20 @@
                     </tr>
                     <tr>
                         <td><input type="text" value="" id="student_name"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="marks"></td>
+                        <td><input type="text" value="" class="total"></td>
+                        <td><input type="text" value="" class="percentage"></td>
+                        <td><input type="text" value="" class="result"></td>
+
+                    </tr>
+                    <tr>
+                        <td><input type="text" value="" id="student_name"></td>
+                        <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
                         <td><input type="text" value="" class="marks"></td>
