--- a/seleniumTest/Emp1.html
+++ b/seleniumTest/Emp1.html
@@ -91,6 +91,12 @@
             <td><input type=text value="" class="join_date" placeholder="Enter date | dd-mm-yyyy"></td>
             <td><input type=text value="" class="years_of_exp" placeholder="Enter YOE"></td>
         </tr>
+        <tr>
+            <td><input type=text value="" class="name" placeholder="Enter name"></td>
+            <td><input type=text value="" class="emp_id" placeholder="Enter id (Number)"></td>
+            <td><input type=text value="" class="join_date" placeholder="Enter date | dd-mm-yyyy"></td>
+            <td><input type=text value="" class="years_of_exp" placeholder="Enter YOE"></td>
+        </tr>
 
     </table>
 </center>
