--- a/seleniumTest/Emp2.html
+++ b/seleniumTest/Emp2.html
@@ -86,6 +86,12 @@
             <td><input type=text value="" class="join_date"></td>
             <td><input type=text value="" class="years_of_exp"></td>
         </tr>
+         <tr>
+            <td><input type=text value="" class='name'></td>
+            <td><input type=text value="" class='emp_id'></td>
+            <td><input type=text value="" class="join_date"></td>
+            <td><input type=text value="" class="years_of_exp"></td>
+        </tr>
 
 </center>
 <script src="../js/app.js"></script>
