--- a/Reports/TestResults___main__.countWidget_2020-04-27_14-08-08.html
+++ b/Reports/TestResults___main__.countWidget_2020-04-27_14-08-08.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Test Report</title>
+    <title>Unittest Results</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -10,10 +10,10 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h2 class="text-capitalize">Test Report</h2>
-                <p class='attribute'><strong>Start Time: </strong>2020-04-17 11:02:53</p>
-                <p class='attribute'><strong>Duration: </strong>31.57 s</p>
-                <p class='attribute'><strong>Summary: </strong>Total: 2, Pass: 1, Error: 1</p>
+                <h2 class="text-capitalize">Unittest Results</h2>
+                <p class='attribute'><strong>Start Time: </strong>2020-04-27 14:08:08</p>
+                <p class='attribute'><strong>Duration: </strong>54.59 s</p>
+                <p class='attribute'><strong>Summary: </strong>Total: 3, Pass: 3</p>
             </div>
         </div>
         <div class="row">
@@ -21,52 +21,74 @@
                 <table class='table table-hover table-responsive'>
                     <thead>
                         <tr>
-                            <th>AssignmentSecond.LoadYoutube.LaunchFacebook</th>
+                            <th>__main__.countWidget</th>
                             <th>Status</th>
                             <th></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr class='success'>
-                            <td class="col-xs-10">test_FacebookTest</td>
+                            <td class="col-xs-10">test_count1</td>
                             <td class="col-xs-1">
                                 <span class="label label-success" style="display:block;width:40px;">Pass</span>
-                            </td>
-                            <td class="col-xs-1">
-                            </td>
-                        </tr>
-                        <tr class='warning'>
-                            <td class="col-xs-10">test_FacebookTest_correct</td>
-                            <td class="col-xs-1">
-                                <span class="label label-warning" style="display:block;width:40px;">Error</span>
                             </td>
                             <td class="col-xs-1">
                                 <button class="btn btn-default btn-xs">View</button>
                             </td>
                         </tr>
                         <tr style="display:none;">
-                            <td class="col-xs-9" colspan="3"><p style="color:maroon;">NoSuchElementException: Message: no such element: Unable to locate element: {"method":"css selector","selector":"[id="pas"]"}
-  (Session info: chrome=80.0.3987.163)
-</p><p style="color:maroon;">Traceback (most recent call last):
-  File "E:\workspace\webAutomationSelenium\AssignmentSecond\LoadYoutube.py", line 35, in test_FacebookTest_correct
-    password = driver.find_element_by_id("pas")  # ("pass")
-  File "C:\Anaconda\Anaconda3\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 360, in find_element_by_id
-    return self.find_element(by=By.ID, value=id_)
-  File "C:\Anaconda\Anaconda3\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 978, in find_element
-    'value': value})['value']
-  File "C:\Anaconda\Anaconda3\lib\site-packages\selenium\webdriver\remote\webdriver.py", line 321, in execute
-    self.error_handler.check_response(response)
-  File "C:\Anaconda\Anaconda3\lib\site-packages\selenium\webdriver\remote\errorhandler.py", line 242, in check_response
-    raise exception_class(message, screen, stacktrace)
-selenium.common.exceptions.NoSuchElementException: Message: no such element: Unable to locate element: {"method":"css selector","selector":"[id="pas"]"}
-  (Session info: chrome=80.0.3987.163)
+                            <td class="col-xs-9" colspan="3"><p>
+radio button count =  3
 
+radio button count =  6
+
+radio button count =  9
+----------------------------------------------------------
+</p>
+                            </td>
+                        </tr>
+                        <tr class='success'>
+                            <td class="col-xs-10">test_count2</td>
+                            <td class="col-xs-1">
+                                <span class="label label-success" style="display:block;width:40px;">Pass</span>
+                            </td>
+                            <td class="col-xs-1">
+                                <button class="btn btn-default btn-xs">View</button>
+                            </td>
+                        </tr>
+                        <tr style="display:none;">
+                            <td class="col-xs-9" colspan="3"><p>
+text box count =  6
+----------------------------------------------------------
+</p>
+                            </td>
+                        </tr>
+                        <tr class='success'>
+                            <td class="col-xs-10">test_count3</td>
+                            <td class="col-xs-1">
+                                <span class="label label-success" style="display:block;width:40px;">Pass</span>
+                            </td>
+                            <td class="col-xs-1">
+                                <button class="btn btn-default btn-xs">View</button>
+                            </td>
+                        </tr>
+                        <tr style="display:none;">
+                            <td class="col-xs-9" colspan="3"><p>
+Combobox count :  2
+
+combobox value count =  4
+volvo
+benz
+tesla
+audi
+
+combobox value count =   4
 </p>
                             </td>
                         </tr>
                         <tr>
                             <td colspan="3">
-                                Total: 2, Pass: 1, Error: 1 -- Duration: 31.57 s
+                                Total: 3, Pass: 3 -- Duration: 54.59 s
                             </td>
                         </tr>
                     </tbody>
